syntax = "proto3";
package proto;

option go_package  = "./pb";

message BridgeChainRequest{
  string chain = 1;
  string option=2;
  string bridge_provider =3;
}
message BridgeChainResponse{
  repeated BridgeChainInfo chains=1;
}


message BridgeChainInfo {
  string symbol =1;
  string chain_type =2;
  string name =3;
  string coin =4;
  int64 chain_id =5;
  string logo_url =6;
  bool main_net =7;
}

message BridgeChainTokensRequest{
  string chain = 1;
  string from_chain =2;
  string to_chain =3;
  string from_token=4;
  bool full_list = 5; //Optional
  string bridge_provider =6;
}

message BridgeChainTokensResponse{
  repeated BridgeTokens tokens=1;
}


message BridgeTokens{
  string token_address=1;
  int64 token_decimals=2;
  string token_symbol=3;
  string token_name=4;
  string token_logo_url=5;
}

message BridgeQuoteRequest{
  string from_chain=1;
  string from_token=2;
  string to_chain=3;
  string to_token=4;
  string from_amount=5;
  string from_address=6;
  string to_address=7;
  string chain = 8;
  string bridge_provider =9;
}

message BridgeQuoteResponse{
  string tool=1;
  ToolDetails tool_details=2;
  Estimate estimate=3;
  BridgeFee bridge_fee=4;
}

message BridgeFee{
  string contract_address =1;
  string symbol=2;
  string amount=3;
  int64 token_decimals=4;
  string amount_usd=5;
}

message ToolDetails{
  string key=1;
  string name=2;
  string logo_url=3;
}
message Estimate{
  string from_amount=1;
  int64 from_token_decimals=2;
  string to_amount=3;
  string to_amountMin=4;
  int64 to_token_decimals=5;
  double execution_duration=6;
  string from_amount_usd=7;
  string to_amount_usd=8;
  string approve_address=9;
}

message BridgeTransactionRequest{
  string from_chain=1;
  string from_token=2;
  string to_chain=3;
  string to_token=4;
  string from_amount=5;
  string from_address=6;
  string to_address=7;
  string chain = 8;
  string bridge_provider =9;
}

message BridgeTransactionResponse{
  string tool=1;
  ToolDetails tool_details=2;
  TransactionRequest transaction_request=3;
}

message TransactionRequest{
  string data=1;
  string to=2;
  string gas_limit=3;
  string value=4;
}

message BridgeTransactionStatusRequest{
  string bridge=1;
  string fromChain=2;
  string toChain=3;
  string txHash=4;
  string bridge_provider=5;
}

message BridgeTransactionStatusResponse{
  bool is_success=1;
  string msg =2;
  string status=3;
  string tx_hash=4;
}